FIX#44 caret alignment

--- a/src/_select_svelte.scss
+++ b/src/_select_svelte.scss
@@ -76,8 +76,8 @@
   background-color: unset;
   border-color: transparent;
 }
-
 .ss-caret {
+  margin-top: 3px;
   margin-left: auto;
   color: $dark;
 }
